twitter-clone/src/App.scss
section,div,p,img,ul,ol,li{
  margin:0;
  padding:0;
}

#App {
  display: flex;
  height:100vh;
  max-height: 100vh;
  width: 100vw;
  overflow-x: hidden;
  /*overflow-y: hidden;*/
  background-color: white;
  align-items: center;
  font-size: calc(10px + 2vmin);
  color: black;
  section{
    height:100%;
  };
  #left-container{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: end;
    border-right:0.05rem solid rgba(220,220,220,0.3);
    flex:0 0 30.3%;
    font-family: 'Arimo', sans-serif;
    font-size:1.2rem;
    nav{
      //border:solid green;
      display: flex;
      flex-direction: column;
      align-items: start;
      width: 47%; 
      max-width: 100%;
      height:60%;
      max-height: 100vh;
      text-decoration: none;

      .nav-list-items{
        display: flex;
        align-items: center;
        margin-left:0.1rem;
        margin-bottom: 0rem;
        padding: 0.8rem 1.5rem 0.8rem 0.7rem;
        //border:solid blue;
        .nav-text{
          margin-left: 1rem;
          //border:dashed greenyellow;
        }
        //border:dashed pink;
      }
      .nav-list-items:hover{
        background-color: rgba(220,220,220,0.6);
        border-radius: 2rem;
        width: max-content;         
      }

      #nav-twitter-logo{
        //margin-bottom: -0.5rem;
        border-radius: 50%;
        padding:0.2rem 0.2rem 0.2rem 0.2rem;
        //border:solid brown;
      }
      #nav-twitter-logo:hover{
        margin-bottom: -0.5rem;
        border-radius: 50%;
        background-color: yellow;
        //padding:0.2rem 0.2rem 0.2rem 0.2rem;
      }
      .nav-list-icons{
        //border:solid blue;
        //margin:0 0 0 0.8rem;
        width: 1.85rem;
        height:1.7rem;
        //align-self: center;
      }
      ul{
        //border:solid yellow;
        list-style: none;
        width:100%;
        //list-style-image:url("birdhouse.png");
        .timeline-icons{
          width: 5rem;
          height: 2rem;
          margin-bottom: 1rem;
        }
        a{
          text-decoration: none;
          color: initial;
          height: 0.5rem;
          margin-bottom:5rem;
        }
        .tweet-btn{
          margin-top: 1.3rem;
          height: 3.3rem;
          width: 86.5%;
        }
        
        button{
          //align-self:start;
          font-weight: bold;
          font-size: 1.1rem;
          border-radius:3rem;
          max-width: 100%;
          width:100%;
          height:auto;
          color:white;
          background-color: #1d9bf0;
          border: none;
          //margin-top: 1.5rem;
        }
        button:hover{
          background-color: #1d8ad3;
        }
      } 
      //must add hover effect
    }
    #profile-pill-container{
      width: 45%;
      display: flex;
      justify-content: start;
      padding-bottom: 1rem;
      margin-right: 0.1rem;
    }
    #profile-pill{
      display: flex;
      justify-content:space-between;
      align-items: center;
      justify-self: start;
      
      padding:0.5rem 1rem 0.5rem 1rem;
      width: 12rem;
      height: 3.6rem;
      border-radius: 3.6rem;
      font-size: 1rem;
      overflow: hidden;
      img{
        width:3rem;  
        height:3rem;
        border-radius: 50%;
      }
    }
    #profile-pill:hover{
      background-color: rgba(220,220,220,255);
    }
  
  };
  #middle-container{
  
    flex:0 0 32.2%;
    overflow-y: scroll;
    

    #timeline-div{
      
      height: 100vh; 
      #mid-header{
        display: flex;
        align-items: center;
        font-size:1.2rem;
        font-weight: bold;
        height:3.2rem;
        padding-left: 1rem;
      }
      #tweet-area{
        display: flex;
        justify-content: space-between;
       
        img{
          width:3rem;  
          height:3rem;
          border-radius: 50%;
          align-self: center;
          margin-left: 1rem;
          margin-top: -0.9rem;
        }
        #tweet-input{
          width: 87%;
          height:5rem;
          border: none;
          
        }
        ::placeholder{
          font-size: 1.23rem;
          
          color: black;
          opacity: 0.7;
        }
        #tweet-input:focus{
          outline: 0;
        }
      }
      #icons-row{
        padding:0 0 1rem 5rem;
        display: flex;
        justify-content: space-between;
        border-bottom: 0.05rem solid rgba(220,220,220,0.3);
        
        ul{
          display: flex;
          li{
            list-style: none;
            margin:0 1rem 0 0;
            img{
              transform: scale(1.05);
            }
          }
        }
        button{
          justify-self:end;
          font-weight: bold;
          font-size: 1.1rem;
          border-radius:2.3rem;
          width:5rem;
          height:2.3rem;
          color:white;
          background-color: #1d9bf0;
          border: none;
          margin-right: 1rem;
        }
    }
    }
  };

  #middle-container::-webkit-scrollbar{
    display: none;}

  #right-container{
    display: flex;  
    flex-direction: column;
    gap: 1rem;
    padding-left: 2rem;
    border-left:0.05rem solid rgba(220,220,220,0.3);
    flex:0 0 37.2%;
    input{
      background-color: rgba(239,243,244,255);
      border-width: 0;
      border-radius:3rem;
      width: 50%;
      height:2.5rem;
      margin-top: 0.32rem;
    }
      ::placeholder{
        padding-left: 2rem;
      }

    #trending-section{
      display: flex;
      justify-content: initial;
      flex-direction: column;
      width:50%;
      height: 24rem;
      background-color: rgba(239,243,244,255);
      border-radius: 5%;
      overflow: hidden;
      
      
      .cards-header{
        display: flex;
        font-size: 1.3rem;
        font-weight: bold;
        padding-left:1rem;
        flex:0 0 14%;
        align-items: center;
      }
      .cards{
        padding-left: 1rem;
        
        flex:0 0 18%;
      }
      .cards:hover{
        background-color: rgba(220,220,220,255);
      }
      .cards-footer{
        display:flex;
        align-items: center;
        flex:0 0 14%;
        font-size: 1rem;
        padding-left: 1rem;
        a{
        text-decoration: none;
        color:#53b3f2;
        }
      }
      .cards-footer:hover{
        background-color: rgba(220,220,220,255);
        
      }
      
    }

    #rec-follows-section{
      display: flex;
      justify-content: initial;
      flex-direction: column;
      width:50%;
      height: 19.92rem;
      background-color: rgba(239,243,244,255);
      border-radius: 5%;
      overflow: hidden;

      .cards-header{
        display: flex;
        font-size: 1.3rem;
        font-weight: bold;
        padding-left:1rem;
        flex:0 0 17%;
        align-items: center;
      }
      .cards{
        padding-left: 1rem;
        
        flex:0 0 22%;
      }
      .cards:hover{
        background-color: rgba(220,220,220,255);
      }
      .cards-footer{
        display:flex;
        align-items: center;
        flex:0 0 17%;
        font-size: 1rem;
        padding-left: 1rem;
        a{
        text-decoration: none;
        color:rgba(48,164,241,255);
        }
      }
      .cards-footer:hover{
        background-color: rgba(220,220,220,255);
        
      }
    }

   
  };
}





/*.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}*/

